2007-10-18  Xavier Thomas <xavier.thomas.1980 chez gmail dot com> 

	Taxes implemantation begins

2007-10-16  Xavier Thomas <xavier.thomas.1980 chez gmail dot com> 

	bug correction

2007-09-17  Xavier Thomas <xavier.thomas.1980 chez gmail dot com> 

	Add Modify and Remoce category finished

2007-09-17  Xavier Thomas <xavier.thomas.1980 chez gmail dot com> 

	Code cleanup

2007-09-17  Xavier Thomas <xavier.thomas.1980 chez gmail dot com> 

	ChangeLog added
