@@ -70,6 +70,7 @@ namespace LibSupos
 			    m_Connection.Close();
 			}
 			m_Connection = null;
+			//UNDONE unload categories, tax, ... (free arraylist)
 		}
 		
 		
@@ -108,6 +109,39 @@ namespace LibSupos
 			return true;
 		}
 		
+		//***************************************
+		// Load Taxes in memory
+		//***************************************
+		public bool LoadTaxes()
+		{	
+			if ( m_Taxes != null)
+			{
+				return false;
+			}
+			NpgsqlCommand Cmd = new NpgsqlCommand( "SELECT id, name, rate FROM taxes", m_Connection );
+			NpgsqlDataReader reader;
+			try
+			{
+				reader = Cmd.ExecuteReader();
+			}
+			catch (Exception e)
+			{
+				Console.WriteLine ( e.Message );
+				return false;
+			}
+			m_Taxes = new ArrayList();
+			while(reader.Read()) 
+			{	
+				SuposTax tmptax = new SuposTax(this, (int)reader["id"] );
+				tmptax.Name = reader["name"].ToString();
+				if( reader["rate"].GetType() != typeof(DBNull) )
+				{
+					tmptax.Rate = (float)reader["rate"];
+				}
+				m_Taxes.Add(tmptax);
+			}
+			return true;
+		}
 
 		//***********************************************
 		// Return the category list (null if not loaded)
@@ -115,6 +149,14 @@ namespace LibSupos
 		public ArrayList GetCategories ()
 		{	
 			return m_Categories;
+		}
+		
+		//***********************************************
+		// Return the tax list (null if not loaded)
+		//***********************************************
+		public ArrayList GetTaxes ()
+		{	
+			return m_Taxes;
 		}
 		
 		//***********************************************
@@ -129,13 +171,25 @@ namespace LibSupos
 			return category.InsertIntoDb(this);
 		}
 		
+		//***********************************************
+		// Add a tax to DB
+		//***********************************************
+		public bool AddTax ( SuposTax tax )
+		{
+			if ( tax == null)
+			{
+				return false;
+			}
+			return tax.InsertIntoDb(this);
+		}
+		
 		//*****************************
 		// Remove the category from DB 
 		//*****************************
 		public bool Remove(SuposCategory category)
 		{
 			NpgsqlCommand command = new NpgsqlCommand("DELETE FROM categories WHERE id=:id", m_Connection);
-			NpgsqlParameter id_param = new NpgsqlParameter ( ":id", DbType.Int64 );
+			NpgsqlParameter id_param = new NpgsqlParameter ( ":id", DbType.Int32 );
 			id_param.Value = category.Id;
 			command.Parameters.Add(id_param);
 			try
@@ -151,5 +205,26 @@ namespace LibSupos
 			return true;
 		}
 		
+		//*****************************
+		// Remove the tax from DB 
+		//*****************************
+		public bool Remove(SuposTax tax)
+		{
+			NpgsqlCommand command = new NpgsqlCommand("DELETE FROM taxes WHERE id=:id", m_Connection);
+			NpgsqlParameter id_param = new NpgsqlParameter ( ":id", DbType.Int32 );
+			id_param.Value = tax.Id;
+			command.Parameters.Add(id_param);
+			try
+			{
+				command.ExecuteNonQuery();
+			}
+			catch (Exception e)
+			{
+				Console.WriteLine( e.Message );
+				return false;
+			}
+			m_Taxes.Remove(tax);
+			return true;
+		}
 	}
 }
